使用duel_select替换原来的方式来编辑审批流程的提交人范围和审批步骤上的审批人

--- a/app/views/irm/wf_approval_processes/_show_steps.html.erb
+++ b/app/views/irm/wf_approval_processes/_show_steps.html.erb
@@ -85,7 +85,7 @@
                       </td>
                       <td class="yui3-column">
                         <div class='yui3-datatable-liner'>
-                          <%= step_approver_meaning(step) %>
+                          <%= step_approver_meaning(step,@bo_duel_value) %>
                         </div>
                       </td>
                       <td class="yui3-column">
