--- a/app/views/irm/organizations/_new_form.html.erb
+++ b/app/views/irm/organizations/_new_form.html.erb
@@ -32,9 +32,8 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_organization_company_name)%></label></td>
-              <td class="dataCol"><%=f.blank_select(:company_id,available_company,
-                                                {},:required=>true)%></td>
+              <td class="labelCol"><label><%=(t :label_irm_organization_name)%></label></td>
+              <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
@@ -45,8 +44,8 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_organization_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
+              <td class="labelCol"><label><%=(t :label_irm_organization_parent_org)%></label></td>
+              <td class="dataCol"><%=f.blank_select(:parent_org_id,available_parentable_organization(@organization.id)) %></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
