--- a/app/views/irm/organizations/index.html.erb
+++ b/app/views/irm/organizations/index.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
+
 <%= app_title %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
@@ -17,21 +19,62 @@
         </table>
       </div>
       <div class="pbBody">
-        <div id="organization_lists" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+          <div class="datatable">
+            <div class="yui3-widget yui3-datatable">
+              <div class="yui3-datatable-content">
+                  <table id='rows' cellspacing="0" cellpadding="0" class='grid'>
+                    <thead class="yui3-datatable-columns">
+                      <tr class="yui3-datatable-first yui3-datatable-last">
+                        <th class="yui3-column" style="width:80px;">
+                          <div class="yui3-datatable-liner"><%= t(:operation) %>
+                          </div>
+                        </th>
+                        <th class="yui3-column" style="width:220px;">
+                          <div class="yui3-datatable-liner"><%= t(:label_irm_organization_name) %>
+                          </div>
+                        </th>
+                        <th class="yui3-column" style="width:180px;">
+                          <div class="yui3-datatable-liner"><%= t(:label_irm_organization_parent_org) %>
+                          </div>
+                        </th>
+                        <th class="yui3-column" style="width:180px;">
+                          <div class="yui3-datatable-liner"><%= t(:description) %>
+                          </div>
+                        </th>
+
+                      </tr>
+                    </thead>
+                    <tbody class="yui3-datatable-data">
+                    <% @leveled_organizations.each do |organization| %>
+                    <tr id="<%=organization.id%>" class="yui3-datatable-even">
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'>
+                          <%= link_to(t(:edit),{:action=>"edit",:id=>organization.id}) %>
+                          <%= link_to(t(:show),{:action=>"show",:id=>organization.id}) %>
+                         </div>
+                      </td>
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'>
+                           <% organization.level.times do %>&nbsp;&nbsp;&nbsp;&nbsp;<%end%><%= organization[:name] %>(<%= organization.short_name %>)
+                        </div>
+                      </td>
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'>
+                           <%= organization[:parent_org_name] %>
+                        </div>
+                      </td>
+                      <td class="yui3-column">
+                        <div class='yui3-datatable-liner'>
+                           <%= organization[:description] %>
+                        </div>
+                      </td>
+                    </tr>
+                    <% end -%>
+                    </tbody>
+                  </table>
+              </div>
+            </div>
           </div>
         </div>
-        <%= datatable("organization_lists",url_for(:action=>"get_data",:format=>"json"),
-                  [{:key=>"id",:label=>t(:edit),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"company_name",:label=>t(:label_irm_organization_company_name),:sortable=>true,:searchable=>true,:width=>"10%"},
-                   {:key=>"short_name",:label=>t(:label_irm_organization_short_name),:sortable=>true,:searchable=>true,:width=>"10%"},
-                   {:key=>"name",:label=>t(:label_irm_organization_name),:sortable=>true,:searchable=>true,:width=>"20%"},
-                   {:key=>"description",:label=>t(:label_irm_organization_description),:sortable=>true},
-                   {:key=>"status_meaning",:label=>t(:label_irm_organization_status_code),:sortable=>true,:width=>"40px"}],
-                   {:search_box=>"permissionsSearchBox",:paginator_box=>"organizationsPaginatorBox"})%>
-        <div id="organizationsPaginatorBox"></div>
-      </div>
     </div>
 </div>
