--- a/app/views/irm/organizations/show.html.erb
+++ b/app/views/irm/organizations/show.html.erb
@@ -19,10 +19,10 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_organization_company_name)%></label></td>
-              <td class="dataCol"><%=@organization[:company_name]%></td>
               <td class="labelCol"><label><%=(t :label_irm_organization_short_name)%></label></td>
               <td class="dataCol"><%=@organization.short_name%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>              
               <td class="labelCol"><label><%=(t :label_irm_organization_name)%></label></td>
