--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -29,7 +29,7 @@
                    {:key=>"person_name",:label=>t(:label_irm_person_name),:sortable=>true,:searchable=>true,:width=>"120px"},
                    {:key=>"email_address",:label=>t(:label_irm_person_email_address),:searchable=>true},
                    {:key=>"bussiness_phone",:label=>t(:label_irm_person_bussiness_phone),:searchable=>true},
-                   {:key=>"company_name",:label=>t(:label_irm_person_company),:sortable=>true,:searchable=>true},
+                   {:key=>"organization_name",:label=>t(:label_irm_person_organization),:sortable=>true,:searchable=>true},
                    {:key=>"region_name",:label=>t(:label_irm_person_region_code),:sortable=>true,:searchable=>true}],
                    {:search_box=>"permissionsSearchBox",:paginator_box=>"peoplePaginatorBox"})%>
         <div id="peoplePaginatorBox"></div>
