--- a/app/views/irm/people/show.html.erb
+++ b/app/views/irm/people/show.html.erb
@@ -12,7 +12,7 @@
      class="linklet" onmouseover="relatedListPanel.showRLDelayed('id_person_company_access');"
      onmouseout="relatedListPanel.hideRLDelayed('id_person_company_access');">
     <span class="listTitle"><%= t(:label_irm_person_company_access) %>
-       <span class="count">[<%= @company_access_count %>]</span>
+       <span class="count">[<%=  %>]</span>
     </span>
   </a>
   <span class="pipe"> | </span>
@@ -100,8 +100,8 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
              <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_company)%></label></td>
-                 <td class="dataCol"><%=@person[:company_name]%></td>
+                 <td class="labelCol"></td>
+                 <td class="dataCol"></td>
                   <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
                   <td class="dataCol"><%=@person[:region_name]%></td>
              </tr>
@@ -113,8 +113,8 @@
              <td class="dataCol"><%= @person[:site_group_name] %></td>
              </tr>
              <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_department)%></label></td>
-                 <td class="dataCol"><%= @person[:department_name]%></td>
+                 <td class="labelCol"></td>
+                 <td class="dataCol"></td>
 
                <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
                  <td class="dataCol"><%= @person[:site_name] %></td>
@@ -194,51 +194,6 @@
   </div>
 </div>
 
-<div id="id_person_company_access" class="bRelatedList">
-    <a name="id_person_company_access_target">
-    </a>
-    <div class="listRelatedObject taskBlock">
-      <div class="bPageBlock secondaryPalette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3 id="id_person_company_access_title"><%=t(:label_irm_person_company_access)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:edit), "#",
-                                                :onclick=>"navigateToUrl('#{url_for(:controller=>"irm/company_accesses",
-                                                          :action => "new",:person_id=>@person.id)}');"%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="id_company_access" class="pbBody">
-          <div id="person" class="datatable" style="width:100%;">
-            <div id="company_access_flag" style="display:none">
-              <%= check_img("{company_access_flag}") %>
-            </div>
-            <div id="support_stuff_flag" style="display:none">
-              <%= check_img("{support_stuff_flag}") %>
-            </div>
-          </div>          
-          <!-- Begin company access table -->
-            <%= datatable("person",url_for(:controller=>"irm/company_accesses",:action=>"get_data",:person_id=>@person.id),
-                              [{:key=>"company_name",:label=>t(:label_irm_person_company),:sortable=>true},
-                               {:key=>"company_access_flag",:label=>t(:label_irm_person_company_access_flag),:formatter=>"Y.irm.template",:sortable=>true},
-                               {:key=>"support_stuff_flag",:hidden=>true,:label=>t(:label_irm_person_support_stuff_flag),:formatter=>"Y.irm.template",:sortable=>true}])%>
-          <!-- End company access table -->
-        </div>
-        <div class="pbFooter secondaryPalette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
-</div>
 
 <div id="id_person_support_group" class="bRelatedList">
     <a name="id_person_support_group_target">
@@ -254,8 +209,8 @@
               </td>
               <td class="pbButton">
                 <div class="button"><%= link_to t(:label_irm_person_add_to_support_group), "#",
-                                                :onclick=>"navigateToUrl('#{url_for(:controller=>"irm/support_group_members",
-                                                          :action => "new_from_person",:person_id=>@person.id)}');"%></div>
+                                                :onclick=>"navigateToUrl('#{url_for(:controller=>"irm/group_members",
+                                                          :action => "new_from_person",:id=>@person.id)}');"%></div>
               </td>
               <td class="pbHelp">
               </td>
@@ -266,17 +221,16 @@
         <div id="id_support_group" class="pbBody">
           <div id="support_group" class="datatable" style="width:100%;">
             <div id="id" style="display:none">
-              <%= link_to t(:remove), {:controller=>"irm/support_group_members",:action=>"delete_from_person",:id=>"{id}",
+              <%= link_to t(:remove), {:controller=>"irm/group_members",:action=>"delete_from_person",:id=>"{id}",
                                       :person_id=>@person.id},:confirm => t(:label_are_you_sure) ,
                                       :method => :delete %>
             </div>
           </div>
           <!-- Begin company access table -->
-            <%= datatable("support_group",url_for(:controller=>"irm/people",:action=>"get_support_group",:person_id=>@person.id),
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
-                               {:key=>"support_group_name",:label=>t(:label_irm_support_group_name),:sortable=>true},
-                               {:key=>"description",:label=>t(:label_irm_support_group_description),:sortable=>true},
-                               {:key=>"status_meaning",:label=>t(:label_irm_support_group_status_code),:sortable=>true,:width=>"80px"}])%>
+            <%= datatable("support_group",url_for(:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id),
+                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
+                               {:key=>"name",:label=>t(:label_irm_group_name),:sortable=>true},
+                               {:key=>"description",:label=>t(:label_irm_group_description),:sortable=>true}])%>
           <!-- End company access table -->
         </div>
         <div class="pbFooter secondaryPalette">
