在incident_requests下增加一个页面：kanban_index.html.erb，专门放置看板。 移除原来的TAB控件，增加一个按钮，用于切换 看板模式 以及 列表模式。 在按钮处增加权限控制：
<% if allow_to_function?(:view_kanban) %>
<div style="display:block;width:100%;float:left;margin-bottom:15px;">
    <div class="button"><%= link_to t(:kanban_mode), {:action => "kanban_index"}%></div>
</div>
<% end %>

--- a/app/views/irm/kanbans/_kanban_main.html.erb
+++ b/app/views/irm/kanbans/_kanban_main.html.erb
@@ -64,7 +64,7 @@
                 Y.one("#kanban_<%= position_code%>").set('innerHTML', data);
             }
           Y.on('io:complete', complete, Y);
-            var uri = "kanbans/<%= position_code%>/refresh_my_kanban/" + mode;
+            var uri = "/kanbans/<%= position_code%>/refresh_my_kanban/" + mode;
             var request = Y.io(uri);
           });
       }
