--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -26,21 +26,31 @@
             <tr>
               <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
               <td class="dataCol"><%= @person.login_name %></td>
+              <td class="labelCol"><label><%=t(:label_irm_role)%></label></td>
+              <td class="dataCol"><%= @person.role_name %></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
               <td class="dataCol"><%= @person.email_address%></td>
+              <td class="labelCol"><label><%=(t :label_irm_profile)%></label></td>
+              <td class="dataCol"><%= @person.profile_name%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
               <td class="dataCol"><%=@person.last_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
-              <td class="dataCol"><%=@person.first_name%></td>
-            </tr>
-
-            <tr>
               <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
               <td class="dataCol"><%= @person[:language_description] %></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
+              <td class="dataCol"><%=@person.first_name%></td>
               <td class="labelCol"><label><%=(t :label_irm_identity_last_login_at)%></label></td>
               <td class="dataCol"><%=@person.last_login_at%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><%=(t :label_irm_person_title)%></td>
+              <td class="dataCol">
+                <%= @person.title_name %></td>
             </tr>
         </tbody>
       </table>
