--- a/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -1,5 +1,5 @@
-<% if allow_to_function?(:view_watchers) %>
-    <% l_editable = allow_to_function?(:edit_watchers)%>
+<% if allow_to_function?(:view_watcher) %>
+    <% l_editable = allow_to_function?(:edit_watcher)%>
     <% (l_editable = editable && l_editable) if !editable.nil?%>
     <%= form_tag({:controller => "irm/watchers", :action => "add_watcher", :watchable_id => watchable.id}, :remote => true) do %>
     <div class="sidebarModule">
