--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -165,7 +165,7 @@
               <td class="dataCol"><%= f.select(:support_person_id,nullable_options_for_select([],nil),{},
                                   {
                                    :id=>"incident_request_support_person_id",
-                                   :href=>url_for(:controller=>"irm/support_group_members",:action=>"get_options",:format=>"json",:group_id=>"{incident_request_support_group_id}"),
+                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"{incident_request_support_group_id}"),
                                    :depend=>"incident_request_support_group_id",
                                    :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
                                    }) %></td>
