--- a/app/views/icm/incident_requests/_search.html.erb
+++ b/app/views/icm/incident_requests/_search.html.erb
@@ -26,7 +26,7 @@
                         </div>
                       </th>
                       <th class="yui3-column" style="width:180px;">
-                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_company) %>
+                        <div class="yui3-datatable-liner"><%= t(:label_icm_incident_request_organization) %>
                         </div>
                       </th>
                       <th class="yui3-column" style="width:180px;">
@@ -50,7 +50,7 @@
                     </td>
                     <td class="yui3-column">
                       <div class='yui3-datatable-liner'>
-                        <%=r[:company_name]%>
+                        <%=r[:organization_name]%>
                       </div>
                     </td>
                     <td class="yui3-column">
