--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,17 +101,20 @@
                 <div id="bd_br"></div>
             </div>
 
-            <div id="sidebarDiv">
-                <div class="sidebarInner">
-                    <%= render :partial =>"/irm/common/quick_create"%>
-                    <%if has_content?(:sidebar) %>
-                        <%= yield :sidebar %>
-                    <%end%>
-                </div>
-            </div>
+
 
             <table id="bodyTable" class="outer" width="100%" cellpadding="0" cellspacing="0">
                 <tr>
+                  <td id="sidebarCell">
+                    <div id="sidebarDiv">
+                        <div class="sidebarInner">
+                            <%= render :partial =>"/irm/common/quick_create"%>
+                            <%if has_content?(:sidebar) %>
+                                <%= yield :sidebar %>
+                            <%end%>
+                        </div>
+                    </div>
+                  </td>
                   <td id="bodyCell" class="oRight">
                     <%= yield %>
                   </td>
